[package]
name = "crab-iot"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
lto = true
codegen-units = 1

[dependencies]
device = {path = "./device"}
serde_json = "1.0"


[workspace]
members = ["fake_plugin", "bench", "device"]
