[package]
name = "crab-iot"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
debug = true
lto = true
codegen-units = 1

[dependencies]
device = {path = "./device"}
utils = {path = "./utils"}
serde_json = "1.0"
pretty_assertions = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
coap = "0.7"
lazy_static = "1.4"

reqwest = { default-features = false, version = "0.11", features = ["json", "blocking", "rustls-tls"] }

etcd-client = "0.5"
tokio = { version = "1.0", features = ["full"] }
rustls = "0.18"

actix-web = { version = "3.3", features = ["rustls"] }
actix-files = "0.3"
actix-session = "0.4"
actix-utils = "2"
simple_logger = "1.11.0"
log = "0.4.13"
actix-rt = "1.1.1"
[workspace]
members = ["fake_plugin", "bench", "device", "weather_fake_plugin", "weather_plugin", "utils"]

[[bin]]
name = "mockup_device"
path = "mockup_device/src/main.rs"
