[package]
name = "crab-iot-benchs"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.1"
device = {path = "../device" }
serde_json = "1.0"
[[bench]]
name = "benchmarks"
harness = false
path = "src/bench.rs"
