[package]
name = "device"
version = "0.1.0"
authors = ["Arturo Cortés Sánchez <arturocs@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.6"
utils = {path = "../utils"}
