[package]
name = "experimental_plugin"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "experimental_plugin"
crate-type = ["cdylib"]  

[dependencies]
serde_json = "1.0"
once_cell = "1.4"
utils = {path = "../utils"}
