[package]
name = "fake_plugin"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fake_plugin"
crate-type = ["cdylib"]  

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"
once_cell = "1.4"