[package]
name = "weather_fake_plugin"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "weather_fake_plugin"
crate-type = ["cdylib"]  

[dependencies]
serde_json = "1.0"
utils = {path = "../utils"}
once_cell = "1.4"
serde = { version = "1.0", features = ["derive"] }