[package]
name = "weather_plugin"
version = "0.1.0"
authors = ["Arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "weather_plugin"
crate-type = ["cdylib"]  

[dependencies]
serde_json = "1.0"
utils = {path = "../utils"}
serde = { version = "1.0", features = ["derive"] }
coap = "0.10"
